[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 10.733, 7.09351 )

[node name="Bullet" type="Node2D"]
script = ExtResource( 1 )
Speed = 1200

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="StickyArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StickyArea"]
position = Vector2( 2.67917, -4.09782e-008 )
shape = SubResource( 2 )

[connection signal="timeout" from="DestructionTimer" to="." method="_on_DestructionTimer_timeout"]
[connection signal="body_entered" from="StickyArea" to="." method="_on_StickyArea_body_entered"]
